Added form.io snippet for testing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 </head>
 
 <body>
-	<p>Hosting with GitHub Pages.</p>
+	<p>Hosting with GitHub Pages.
+	</p>
+	
+	<script type="text/javascript">(function a(u) {if (typeof jQuery === "undefined") {return setTimeout(a, 100);}document.write(jQuery(document.createElement("script")).attr("src", "https://npmcdn.com/seamless@latest"));(function b($) {if (typeof $.fn.seamless === "undefined") {return setTimeout(b, 100);}$(function() {$('#formio-form').seamless({fallback:false}).receive(function(d, e) {window.location.href = "https://github.com";});});})(jQuery);})();</script><iframe id="formio-form" style="width:100%;border:none;" height="600px" src="https://form.io/view/#/vbibgjaqyinbgao/feedback?iframe=1&header=0"></iframe>
 </body>
 
 </html>
