--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
 
 <h1 id="required-texts">Required Texts</h1>
 
+<p>Johnson, J. (2014). Designing with the Mind in the Mind. (2nd ed.) Morgan Kaufman.</p>
+
 <p>Kahnemann, D. (2011). Thinking, Fast and Slow. Farrah, Straus and Giroux.</p>
 
 <p>Ware, C. (2008) Visual Thinking for Design. Elsevier.</p>
