--- a/index.html
+++ b/index.html
@@ -348,13 +348,11 @@
 
 <p>Ware, C. (2008) Visual Thinking for Design. Elsevier.</p>
 
-<h1 id="related-reading">Related Reading</h1>
+<h1 id="optional-reading">Optional Reading</h1>
 
 <p>Cialdini, R. B. (2003). Influence: The Psychology of Persuasion. Harper-Collins.</p>
 
 <p>Fogg, BJ. (2002). Persuasive Technology: Using Computers to Change What We Think and Do. Morgan Kaufmann.</p>
-
-<p>Johnson, J. (2013). Designing with the Mind in Mind: Simple Guide to Understanding User Interface Design Guidelines. Elsevier.</p>
 
 <p>Purchase, H. (2012). Experimental Human Computer Interaction. Cambridge.</p>
 
