--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <tr>
 <td>7 Sept</td>
 <td>Overview of HCI research methods</td>
-<td>TBD</td>
+<td><a href="https://drive.google.com/folderview?id=0B3SsgcqV1xSST2x1ZjF0a0R6WU0&amp;usp=sharing">Handout</a> (restricted access)</td>
 <td>Github assignment, Design Problem</td>
 </tr>
 
@@ -353,6 +353,8 @@
 <p>Cialdini, R. B. (2003). Influence: The Psychology of Persuasion. Harper-Collins.</p>
 
 <p>Fogg, BJ. (2002). Persuasive Technology: Using Computers to Change What We Think and Do. Morgan Kaufmann.</p>
+
+<p>Gliner, J. A., Morgan, G. A., &amp; Leech, N. L. (2011). Research Methods in Applied Settings: An Integrated Approach to Design and Analysis. Routledge.</p>
 
 <p>Purchase, H. (2012). Experimental Human Computer Interaction. Cambridge.</p>
 
