Update blog posts

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <tr>
 <td>14 Sept</td>
 <td>TBD</td>
-<td>Choose papers for student presentations</td>
+<td></td>
 <td>Critical review</td>
 </tr>
 
@@ -357,6 +357,10 @@
 <p>Gliner, J. A., Morgan, G. A., &amp; Leech, N. L. (2011). Research Methods in Applied Settings: An Integrated Approach to Design and Analysis. Routledge.</p>
 
 <p>Purchase, H. (2012). Experimental Human Computer Interaction. Cambridge.</p>
+
+<p>Thaler,R. &amp; Sunstein, C. (2009). Nudge: Improving Decisions About Health, Wealth, and Happiness. Penguin Books.</p>
+
+<p>Sedivy, J., &amp; Carlson, G. (2011). Sold on Language: How Advertisers Talk to You and What This Says about You.</p>
 
 <p>Weinschenk, S. (2011). 100 Things Every Designer Needs to Know about People. Pearson Education.</p>
 
