--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <tr>
 <td>14 Sept</td>
 <td>TBD</td>
-<td></td>
+<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/articles-critical-review.md">Selected articles</a></td>
 <td>Critical review</td>
 </tr>
 
