updated links in syllabus

--- a/index.html
+++ b/index.html
@@ -226,21 +226,21 @@
 <td>7 Sept</td>
 <td>Overview of HCI research methods</td>
 <td><a href="https://drive.google.com/folderview?id=0B3SsgcqV1xSST2x1ZjF0a0R6WU0&amp;usp=sharing">Handout</a> (restricted access)</td>
-<td>Github assignment, Design Problem</td>
+<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/github-basics.md">Github assignment</a>, <a href="https://github.com/ub-idia640-2016/course-materials/blob/master/problem-statement.md">Design Problem</a></td>
 </tr>
 
 <tr>
 <td>14 Sept</td>
 <td>TBD</td>
 <td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/articles-critical-review.md">Selected articles</a></td>
-<td>Critical review</td>
+<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/presentation-critical-review.md">Critical review</a></td>
 </tr>
 
 <tr>
 <td>21 Sept</td>
 <td>How do we know what we see? Sense &amp; perception</td>
 <td>Ware Ch. 1-5</td>
-<td>Weekly</td>
+<td>Weekly (<a href="https://github.com/ub-idia640-2016/course-materials/blob/master/weekly-rubric.md">rubric</a>)</td>
 </tr>
 
 <tr>
@@ -317,7 +317,7 @@
 <td>7 Dec</td>
 <td>Student Presentations</td>
 <td></td>
-<td>Presentations</td>
+<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/guidelines-final-project.md">Presentations</a></td>
 </tr>
 </tbody>
 </table>
