updates to syllabus

--- a/index.html
+++ b/index.html
@@ -217,36 +217,36 @@
 <tbody>
 <tr>
 <td>31 Aug</td>
-<td>Introduction, Getting started with GitHub</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week01.html">Introduction</a>, Getting started with GitHub</td>
 <td></td>
 <td></td>
 </tr>
 
 <tr>
 <td>7 Sept</td>
-<td>Overview of HCI research methods</td>
+<td>HCI research methodologies: Controlled experimentation</td>
 <td><a href="https://drive.google.com/folderview?id=0B3SsgcqV1xSST2x1ZjF0a0R6WU0&amp;usp=sharing">Handout</a> (restricted access)</td>
 <td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/github-basics.md">Github assignment</a>, <a href="https://github.com/ub-idia640-2016/course-materials/blob/master/problem-statement.md">Design Problem</a></td>
 </tr>
 
 <tr>
 <td>14 Sept</td>
-<td>TBD</td>
-<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/articles-critical-review.md">Selected articles</a></td>
-<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/presentation-critical-review.md">Critical review</a></td>
+<td>HCI research methodologies: Ethnographic, survey</td>
+<td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/articles-critical-review.md">Selected articles</a>, <a href="https://drive.google.com/open?id=0B3SsgcqV1xSSdmc4TVB6ZjFOcjA">Duranti</a>, <a href="https://drive.google.com/open?id=0B3SsgcqV1xSSUmM0Y1phQjVQTWM">Glasow</a></td>
+<td>Critical review (<a href="https://github.com/ub-idia640-2016/course-materials/blob/master/guidelines-short-paper.md">paper</a>, <a href="https://github.com/ub-idia640-2016/course-materials/blob/master/presentation-critical-review.md">discussion</a>)</td>
 </tr>
 
 <tr>
 <td>21 Sept</td>
 <td>How do we know what we see? Sense &amp; perception</td>
-<td>Ware Ch. 1-5</td>
+<td>Ware Ch. 1-5, (optional: Johnson 1-5)</td>
 <td>Weekly (<a href="https://github.com/ub-idia640-2016/course-materials/blob/master/weekly-rubric.md">rubric</a>)</td>
 </tr>
 
 <tr>
 <td>28 Sept</td>
-<td>How do we know about things? (Memory, priming, and learning)</td>
-<td>Ware Ch. 6-9</td>
+<td>How do we know about things? (Attention, memory, priming, and learning)</td>
+<td>Ware Ch. 6-7, Johnson 7-9,11</td>
 <td>Weekly</td>
 </tr>
 
@@ -267,7 +267,7 @@
 <tr>
 <td>19 Oct</td>
 <td>How do we understand? (Communication as joint action)</td>
-<td>Clark, Goffman</td>
+<td>Clark, Goffman (optional: Johnson 14)</td>
 <td>Weekly</td>
 </tr>
 
