update links for week 2

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 <tr>
 <td>7 Sept</td>
-<td>HCI research methodologies: Controlled experimentation</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week02.html">HCI research methodologies: Experiments</a></td>
 <td><a href="https://drive.google.com/folderview?id=0B3SsgcqV1xSST2x1ZjF0a0R6WU0&amp;usp=sharing">Handout</a> (restricted access)</td>
 <td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/github-basics.md">Github assignment</a>, <a href="https://github.com/ub-idia640-2016/course-materials/blob/master/problem-statement.md">Design Problem</a></td>
 </tr>
