updates for week2

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
 <tr>
 <td>14 Sept</td>
-<td>HCI research methodologies: Ethnographic, survey</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week03.html">HCI research methodologies: Ethnography, survey</a></td>
 <td><a href="https://github.com/ub-idia640-2016/course-materials/blob/master/articles-critical-review.md">Selected articles</a>, <a href="https://drive.google.com/open?id=0B3SsgcqV1xSSdmc4TVB6ZjFOcjA">Duranti</a>, <a href="https://drive.google.com/open?id=0B3SsgcqV1xSSUmM0Y1phQjVQTWM">Glasow</a></td>
 <td>Critical review (<a href="https://github.com/ub-idia640-2016/course-materials/blob/master/guidelines-short-paper.md">paper</a>, <a href="https://github.com/ub-idia640-2016/course-materials/blob/master/presentation-critical-review.md">discussion</a>)</td>
 </tr>
