minor updates - syllabus

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 <tr>
 <td>21 Sept</td>
-<td><a href="https://ub-idia640-2016.github.io/slides/week04.html">How do we know what we see? Sense &amp; perception</a></td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week03.html">How do we know what we see? Sense &amp; perception</a></td>
 <td>Ware Ch. 1-5, (optional: Johnson 1-5)</td>
 <td>Weekly (<a href="https://github.com/ub-idia640-2016/course-materials/blob/master/weekly-rubric.md">rubric</a>)</td>
 </tr>
@@ -247,7 +247,7 @@
 <td>28 Sept</td>
 <td>How do we know about things? (Attention, memory, priming, and learning)</td>
 <td>Ware Ch. 6-7, Johnson 7-9,11</td>
-<td>Weekly</td>
+<td>Weekly, Project - elevator speech</td>
 </tr>
 
 <tr>
@@ -261,7 +261,7 @@
 <td>12 Oct</td>
 <td>How do feelings affect our beliefs? (Emotion, feeling, and neuroaesthics)</td>
 <td>Damasio, Nadal &amp; Skov</td>
-<td>Weekly</td>
+<td>Weekly, Project - ethnographic study of target population</td>
 </tr>
 
 <tr>
@@ -275,28 +275,28 @@
 <td>26 Oct</td>
 <td>How do people make decisions when they are uncertain? (Heuristics and biases)</td>
 <td>Kahneman Ch. 10-14</td>
-<td>Weekly</td>
+<td>Weekly, Project - first draft solution</td>
 </tr>
 
 <tr>
 <td>2 Nov</td>
 <td>Why is framing choice so important? (Rationality &amp; decision-making)</td>
 <td>Kahneman Ch. 25-34, Thaler and Sunstein</td>
-<td>Weekly</td>
+<td>Weekly, Project - relate readings/topics to your solution</td>
 </tr>
 
 <tr>
 <td>9 Nov</td>
 <td>How are people influenced through persuasion?</td>
 <td>Jucker, Cialdini, Fogg or Oinas-Kukkonen &amp; Harjumaa</td>
-<td>Weekly</td>
+<td>Weekly, Updates to project solution</td>
 </tr>
 
 <tr>
 <td>16 Nov</td>
 <td>How does culture affect thinking?</td>
 <td>Hall, Hofstede</td>
-<td>Weekly</td>
+<td>Weekly, Project - plan to evaluate solution effectiveness</td>
 </tr>
 
 <tr>
