update syllabus link week5

--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
 
 <tr>
 <td>21 Sept</td>
-<td><a href="https://ub-idia640-2016.github.io/slides/week04.html">How do we know what we see? Sense &amp; perception</a></td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week04.html">How do we know what we see?</a>  Sense &amp; perception</td>
 <td>Ware Ch. 1-5, (optional: Johnson 1-5)</td>
 <td>Weekly (<a href="https://github.com/ub-idia640-2016/course-materials/blob/master/weekly-rubric.md">rubric</a>)</td>
 </tr>
 
 <tr>
 <td>28 Sept</td>
-<td>How do we know about things? (Attention, memory, priming, and learning)</td>
+<td><a href="(https://ub-idia640-2016.github.io/slides/week05.html)">How do we know about things?</a> (Attention, memory, priming, and learning)</td>
 <td>Ware Ch. 6-7, Johnson 7-9,11</td>
 <td>Weekly, Project - elevator speech</td>
 </tr>
