fix typo syllabus

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 <tr>
 <td>28 Sept</td>
-<td><a href="(https://ub-idia640-2016.github.io/slides/week05.html)">How do we know about things?</a> (Attention, memory, priming, and learning)</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week05.html">How do we know about things?</a> (Attention, memory, priming, and learning)</td>
 <td>Ware Ch. 6-7, Johnson 7-9,11</td>
 <td>Weekly, Project - elevator speech</td>
 </tr>
