week 5 blog post

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
 <tr>
 <td>5 Oct</td>
-<td>How we do think? (Attention and the divided brain)</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week06.html">How we do think?</a> (Attention and the divided brain)</td>
 <td>Kahneman Ch. 1-9</td>
 <td>Weekly</td>
 </tr>
