update syllabus links

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 
 <tr>
 <td>12 Oct</td>
-<td>How do feelings affect our beliefs? (Emotion, feeling, and neuroaesthics)</td>
-<td>Damasio, Nadal &amp; Skov</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week07.html">How do feelings affect our beliefs?</a> (Emotion, feeling, and neuroaesthics)</td>
+<td><a href="https://drive.google.com/open?id=0B3SsgcqV1xSSd09KN3RKTDdyUjA">Damasio</a>, <a href="https://drive.google.com/open?id=0B3SsgcqV1xSSSkVPeWxHaFhzZXM">Nadal &amp; Skov</a></td>
 <td>Weekly, Project - ethnographic study of target population</td>
 </tr>
 
