--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 
 <tr>
 <td>19 Oct</td>
-<td>How do we understand? (Communication as joint action)</td>
-<td>Clark, Goffman (optional: Johnson 14)</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week08.html">How do we understand?</a> (Communication as joint action)</td>
+<td><a href="https://drive.google.com/open?id=0B3SsgcqV1xSSMjR3UWFkbm9sNEU">Clark</a>, <a href="https://drive.google.com/open?id=0B3SsgcqV1xSSY0N2TEYxaWd3ZXM">Goffman</a> (optional: Johnson 14)</td>
 <td>Weekly</td>
 </tr>
 
