--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
 
 <tr>
 <td>26 Oct</td>
-<td>How do people make decisions when they are uncertain? (Heuristics and biases)</td>
+<td>No Class</td>
 <td>Kahneman Ch. 11-14, Johnson 12</td>
 <td>Weekly, Project - first draft solution</td>
 </tr>
 
 <tr>
 <td>2 Nov</td>
-<td>Why is framing choice so important? (Rationality &amp; decision-making)</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week09.html">How do people make decisions when they are uncertain?</a> (Heuristics and Biases); <a href="https://ub-idia640-2016.github.io/slides/week10.html">Why is framing choice so important?</a> (Rationality &amp; decision-making)</td>
 <td>Kahneman Ch. 26, 28, 34, Thaler and Sunstein</td>
 <td>Weekly, Project - relate readings/topics to your solution</td>
 </tr>
