--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 <tr>
 <td>2 Nov</td>
 <td><a href="https://ub-idia640-2016.github.io/slides/week09.html">How do people make decisions when they are uncertain?</a> (Heuristics and Biases); <a href="https://ub-idia640-2016.github.io/slides/week10.html">Why is framing choice so important?</a> (Rationality &amp; decision-making)</td>
-<td>Kahneman Ch. 26, 28, 34, Thaler and Sunstein</td>
+<td>Kahneman Ch. 26, 28, 34, <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1583509">Thaler and Sunstein</a></td>
 <td>Weekly, Project - relate readings/topics to your solution</td>
 </tr>
 
