update links on syllabus

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
 <tr>
 <td>2 Nov</td>
-<td><a href="https://ub-idia640-2016.github.io/slides/week09.html">How do people make decisions when they are uncertain?</a> (Heuristics and Biases); <a href="https://ub-idia640-2016.github.io/slides/week10.html">Why is framing choice so important?</a> (Rationality &amp; decision-making)</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week09.html">How do people make decisions when they are uncertain?</a> (Rationality &amp; decision-making)</td>
 <td>Kahneman Ch. 26, 28, 34, <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1583509">Thaler and Sunstein</a></td>
 <td>Weekly, Project - relate readings/topics to your solution</td>
 </tr>
@@ -288,14 +288,14 @@
 <tr>
 <td>9 Nov</td>
 <td>How are people influenced through persuasion?</td>
-<td>Jucker, Cialdini, Fogg or Oinas-Kukkonen &amp; Harjumaa</td>
+<td><a href="https://www.researchgate.net/publication/220962680_A_Systematic_Framework_for_Designing_and_Evaluating_Persuasive_Systems">Oinas-Kukkonen &amp; Harjumaa</a></td>
 <td>Weekly, Updates to project solution</td>
 </tr>
 
 <tr>
 <td>16 Nov</td>
 <td>How does culture affect thinking?</td>
-<td>Hall, Hofstede</td>
+<td><a href="https://monoskop.org/images/6/60/Hall_Edward_T_Beyond_Culture.pdf">Hall (85-103)</a></td>
 <td>Weekly, Project - plan to evaluate solution effectiveness</td>
 </tr>
 
@@ -309,7 +309,7 @@
 <tr>
 <td>30 Nov</td>
 <td>How do social networks affect behavior?</td>
-<td>Christakis &amp; Fowler, Hodas &amp; Lerman</td>
+<td><a href="http://connectedthebook.com/pages/toc/chapter1.pdf">Christakis &amp; Fowler</a></td>
 <td>Weekly</td>
 </tr>
 
