minor updates to syllabus

--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@
 
 <tr>
 <td>9 Nov</td>
-<td>How are people influenced through persuasion?</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week10.html">How are people influenced through persuasion?</a></td>
 <td><a href="https://www.researchgate.net/publication/220962680_A_Systematic_Framework_for_Designing_and_Evaluating_Persuasive_Systems">Oinas-Kukkonen &amp; Harjumaa</a></td>
 <td>Weekly, Updates to project solution</td>
 </tr>
 
 <tr>
 <td>16 Nov</td>
-<td>How does culture affect thinking?</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week11.html">How does culture affect thinking?</a></td>
 <td><a href="https://monoskop.org/images/6/60/Hall_Edward_T_Beyond_Culture.pdf">Hall (85-103)</a></td>
 <td>Weekly, Project - plan to evaluate solution effectiveness</td>
 </tr>
@@ -308,7 +308,7 @@
 
 <tr>
 <td>30 Nov</td>
-<td>How do social networks affect behavior?</td>
+<td><a href="https://ub-idia640-2016.github.io/slides/week12.html">How do social networks affect behavior?</a></td>
 <td><a href="http://connectedthebook.com/pages/toc/chapter1.pdf">Christakis &amp; Fowler</a></td>
 <td>Weekly</td>
 </tr>
